fix i'm involved align in item list

--- a/public/app/app.css
+++ b/public/app/app.css
@@ -253,6 +253,10 @@ border-radius: 0 !important;
   padding-left: 10px;
 }
 
+.padding-left-16 {
+  padding-left: 16px;
+}
+
 .padding-right-10 {
   padding-right: 10px;
 }
@@ -316,7 +320,6 @@ a.md-button.md-default-theme.md-raised, a.md-button.md-raised, .md-button.md-def
 }
 
 .profile-item-table{
-    border-collapse: collapse;
     width: 100%;
     padding: 16px 16px 16px 0;
 }
@@ -325,16 +328,10 @@ a.md-button.md-default-theme.md-raised, a.md-button.md-raised, .md-button.md-def
     text-align: center;
     font-size: 14px;
     font-weight: 500;
-    height: 50px;
-
 }
 
 .profile-item-table-row{
     text-align: center;
     font-weight: 300;
     font-size: 12px;
-}
-
-.subject-column {
-    width: 20%;
 }
